--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,15 +7,15 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <!-- Use title if it's in the page YAML frontmatter -->
-        <title><%= current_page.data.title || "HTML5 Boilerplate" %></title>
+        <title><%= current_page.data.title || "Mera Falacia" %></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.6.1.min.js"></script>
+        <%= stylesheet_link_tag 'normalize.css' %>
+        <%= stylesheet_link_tag 'main.css' %>
+        <%= javascript_include_tag 'vendor/modernizr-2.6.1.min.js' %>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -26,33 +26,13 @@
           <%= yield %>
         </div>
 
-        <aside>
-          <h2>Recent Articles</h2>
-          <ol>
-            <% blog.articles[0...10].each do |article| %>
-              <li><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></li>
-            <% end %>
-          </ol>
+        <% if content_for? :sidebar %>
+          <%= partial 'sidebar' %>
+        <% end %>
 
-          <h2>Tags</h2>
-          <ol>
-            <% blog.tags.each do |tag, articles| %>
-              <li><%= link_to tag, tag_path(tag) %> (<%= articles.size %>)</a></li>
-            <% end %>
-          </ol>
-
-          <h2>By Year</h2>
-          <ol>
-            <% blog.articles.group_by {|a| a.date.year }.each do |year, articles| %>
-              <li><%= link_to year, blog_year_path(year) %> (<%= articles.size %>)</a></li>
-            <% end %>
-          </ol>
-        </aside>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <%= javascript_include_tag 'vendor/jquery-1.8.0.min.js' %>
+        <%= javascript_include_tag 'plugins.js' %>
+        <%= javascript_include_tag 'main.js' %>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
