styles: adds compass support.

--- a/source/css/main.css.scss
+++ b/source/css/main.css.scss
@@ -93,21 +93,7 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@import "styles";
 
 /* ==========================================================================
    Helper classes
