--- a/source/css/_styles.scss
+++ b/source/css/_styles.scss
@@ -1,3 +1,13 @@
-teste {
-  /* teste */
+@import "susy";
+
+body {
+  @include container;
+}
+
+#main {
+  @include span-columns(9, 12);
+}
+
+aside {
+  @include span-columns(3 omega, 12);
 }
