--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,12 +17,12 @@
         <%= stylesheet_link_tag 'main.css' %>
         <%= javascript_include_tag 'vendor/modernizr-2.6.1.min.js' %>
     </head>
-    <body>
+    <body <%= if content_for? :sidebar then 'class="sidebar"' end %>>
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
         <![endif]-->
 
-        <div id="main" role="main">
+        <div id="main" role="main" >
           <%= yield %>
         </div>
 
