--- a/source/css/_styles.scss
+++ b/source/css/_styles.scss
@@ -1,13 +1,24 @@
 @import "susy";
 
+$total-columns: 4;
+
 body {
   @include container;
+  @include susy-grid-background;
+}
+#main, aside {
+  @include span-columns(4);
 }
 
-#main {
-  @include span-columns(9, 12);
-}
-
-aside {
-  @include span-columns(3 omega, 12);
+@include at-breakpoint(30em 9) {
+  body {
+    @include container;
+    @include susy-grid-background;
+  }
+  #main {
+    @include span-columns(6);
+  }
+  aside {
+    @include span-columns(3 omega);
+  }
 }
