styles: including tweaked gist.io styles. (wip)

--- a/source/layouts/blog.erb
+++ b/source/layouts/blog.erb
@@ -1,5 +1,5 @@
 <% wrap_layout :layout do %>
-  <h1><%= current_page.data.title || "Mera Falacia" %></H1>
+  <h1 class="title"><%= current_page.data.title || "Mera Falacia" %></H1>
   <article>
     <%= yield %>
   </article>
