--- a/source/css/_styles.scss
+++ b/source/css/_styles.scss
@@ -1,24 +1,34 @@
+@import "compass";
+@import "compass/layout/sticky-footer";
 @import "susy";
+@import "gistio";
 
 $total-columns: 4;
 
-body {
+@include sticky-footer(4em, '.page', '.pseudo-footer', 'footer');
+
+.page, footer {
   @include container;
-  @include susy-grid-background;
 }
+footer > p {
+  @include span-columns(4);
+}
+
 #main, aside {
   @include span-columns(4);
 }
 
 @include at-breakpoint(30em 9) {
-  body {
+  .page, footer {
     @include container;
-    @include susy-grid-background;
   }
   #main {
     @include span-columns(6);
   }
   aside {
     @include span-columns(3 omega);
+  }
+  footer > p {
+    @include span-columns(9);
   }
 }
