--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,5 @@
 ---
-title: HTML5 Boilerplate Middleman
+title: Blog
 pageable: true
 per_page: 10
 ---
@@ -13,7 +13,7 @@ per_page: 10
 <% end %>
 
 <% page_articles.each_with_index do |article, i| %>
-  <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
+  <h2 class="title"><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
   <%= article.summary(250) %>
 <% end %>
 
