--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,6 +4,8 @@ pageable: true
 per_page: 10
 ---
 
+<h1>Mera Falácia<span class="sub">Um blog de Capi Etheriel</span></h1>
+
 <% if paginate && num_pages > 1 %>
   <p>Page <%= page_number %> of <%= num_pages %></p>
 
@@ -13,8 +15,10 @@ per_page: 10
 <% end %>
 
 <% page_articles.each_with_index do |article, i| %>
-  <h2 class="title"><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
-  <%= article.summary(250) %>
+  <article>
+    <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
+    <%= article.summary(250) %>
+  </article>>
 <% end %>
 
 <% if paginate %>
