--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,7 +18,7 @@ per_page: 10
   <article>
     <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
     <%= article.summary(250) %>
-  </article>>
+  </article>
 <% end %>
 
 <% if paginate %>
