--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -26,3 +26,7 @@ per_page: 10
     <p><%= link_to 'Next page', next_page %></p>
   <% end %>
 <% end %>
+
+<% content_for :sidebar do %>
+  <%= partial "project_list" %>
+<% end %>
