styles: vertical rhythm for sidebar

--- a/source/css/_styles.scss
+++ b/source/css/_styles.scss
@@ -28,6 +28,7 @@ footer > p {
   }
   aside {
     @include span-columns(3 omega);
+    margin-top: 2em;
   }
   footer > p {
     @include span-columns(9);
