--- a/source/partials/_sidebar.erb
+++ b/source/partials/_sidebar.erb
@@ -1,7 +1,9 @@
 <aside>
   <% if current_page.url != '/' %>
-    <h2>Mera Falácia</h2>
-    <p>Um blog de Capi Etheriel</p>
+    <a class="homelink" href="<%= url_for('/') %>">
+      <h2>Mera Falácia</h2>
+      <p>Um blog de Capi Etheriel</p>
+    </a>
   <% end %>
 
   <%= yield_content :sidebar %>
