--- a/source/css/_styles.scss
+++ b/source/css/_styles.scss
@@ -61,4 +61,6 @@ footer > p {
   @include link-colors(black, black, black, black, black);
   display: block;
   text-decoration: none;
+  margin-bottom: 4em;
+  h2 { margin-bottom: 0; }
 }
