--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,7 +17,7 @@ per_page: 10
 <% page_articles.each_with_index do |article, i| %>
   <article>
     <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
-    <%= article.summary(250) %>
+    <%= article.summary %>
   </article>
 <% end %>
 
