--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,26 +1,25 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!doctype html>
+<html class="no-js">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- Use title if it's in the page YAML frontmatter -->
-        <title><%= current_page.data.title || "Mera Falacia" %></title>
-        <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <title><%= [current_page.data.title, 'Mera Falácia'].select {|e| e} .join(' - ') %></title>
+        <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
+        <meta name="description" content="O blog do Capi Etheriel">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
         <%= stylesheet_link_tag 'normalize.css' %>
         <%= stylesheet_link_tag 'main.css' %>
-        <%= javascript_include_tag 'vendor/modernizr-2.6.1.min.js' %>
+        <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Oswald:700' %>
+        <%= javascript_include_tag 'vendor/modernizr-2.7.1.min.js' %>
     </head>
     <body <%= if content_for? :sidebar then 'class="sidebar"' end %>>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
+        <!--[if lt IE 8]>
+          <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
         <div class='page'>
@@ -37,16 +36,18 @@
 
         <%= partial 'footer' %>
 
-        <%= javascript_include_tag 'vendor/jquery-1.8.0.min.js' %>
+        <%= javascript_include_tag 'vendor/jquery-1.11.0.min.js' %>
         <%= javascript_include_tag 'plugins.js' %>
         <%= javascript_include_tag 'main.js' %>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='//www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X');ga('send','pageview');
         </script>
     </body>
 </html>
