--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,9 +14,12 @@ per_page: 10
   <% end %>
 <% end %>
 
-<% page_articles.each_with_index do |article, i| %>
-  <article>
-    <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
+<% page_articles.each do |article| %>
+  <article <%= tag_attributes(:lang => article.lang) %>>
+    <h2>
+      <%= link_to article.title, article %> 
+      <span><%= article.date.strftime('%b %e') %></span>
+    </h2>
     <%= article.summary %>
   </article>
 <% end %>
