[layout] add links to drupalgive and foss give

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,13 @@
           <p>{{ site.author-bio }}</p>
       </div>
       <nav>
+        <h6>Software Livre</h6>
+        <ul>
+          <li><a href="/drupalgive/">Drupal.org</a></li>
+          <li><a href="/fossgive/">Github</a></li>
+        </ul>
+      </nav>
+      <nav>
         <h6>Me adicione</h6>
         <ul>
           {% if site.twitter %}
