[layout] fixed links to drupalgive and foss give

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         <h6>Software Livre</h6>
         <ul>
           <li><a href="/drupalgive/">Drupal.org</a></li>
-          <li><a href="/fossgive/">Github</a></li>
+          <li><a href="/fossgive/">Other FOSS</a></li>
         </ul>
       </nav>
       <nav>
