--- a/_scss/partials/_header.scss
+++ b/_scss/partials/_header.scss
@@ -134,7 +134,7 @@ header {
   height: 100%;
   background: $smoke-color;
   z-index: 100;
-  overflow: scroll;
+  overflow: auto;
 
   // insuring that off-canvas doesn't take more than the average iPhone portrait width under 400px
   @media (max-width: 399px) {
