--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
     <div id="disqus_thread"></div>
     <script>
       var disqus_config = function () {
-        this.page.url = '{{ site.baseurl }} {{ page.url }}';  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.url = '{{ site.url }}{{ page.url }}';  // Replace PAGE_URL with your page's canonical URL variable
         this.page.identifier = '{{ page.url }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
       };
 
