--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html {% if page.layout == 'post' %}prefix="og: http://ogp.me/ns#"{% endif %}>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -10,6 +10,21 @@
       <meta http-equiv="content-language" content="en-gb" />
       <meta name="description" content="{{ site.description }}">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+      {% if page.layout == 'post' %}
+        <meta property="og:title" content="{{ page.title | default: site.name }}" />
+        <meta property="og:type" content="article" />
+        <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+        <meta property="og:locale" content="{{ page.language | default: 'pt_BR' }}" />
+        <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" />
+        <meta property="article:author" content="{{ page.author | default: 'Capi Etheriel' }}" />
+        <meta property="article:category" content="{{ page.category | default: 'desenvolvimento' }}" />
+        {% if page.tags %}
+          {% for tag in page.tags %}
+            <meta property="article:tag" content="{{ tag }}" />
+          {% endfor %}
+        {% endif %}
+      {% endif %}
+
       <link href="//fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,700|Lora:400,700,400italic" rel="stylesheet" type="text/css">
       <link rel="stylesheet" type="text/css" href="{{ site.baseurl| split: '/' | join:'/' }}/css/main.css" />
       <link href="atom.xml" type="application/atom+xml" rel="alternate" title="Site ATOM Feed">
