--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
         <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
         <meta property="og:locale" content="{{ page.language | default: 'pt_BR' }}" />
         <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" />
-        <meta property="article:author" content="{{ page.author | default: 'Capi Etheriel' }}" />
+        <meta property="article:author" content="{{ page.author | default: site.author-url }}" />
         <meta property="article:category" content="{{ page.category | default: 'desenvolvimento' }}" />
         {% if page.tags %}
           {% for tag in page.tags %}
