--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         <meta property="og:locale" content="{{ page.language | default: 'pt_BR' }}" />
         <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" />
         <meta property="article:author" content="{{ page.author | default: site.author-url }}" />
-        <meta property="article:category" content="{{ page.category | default: 'desenvolvimento' }}" />
+        <meta property="article:section" content="{{ page.category | default: 'desenvolvimento' }}" />
         {% if page.tags %}
           {% for tag in page.tags %}
             <meta property="article:tag" content="{{ tag }}" />
