--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,20 +8,8 @@
       <meta name="description" content="{{ site.description }}">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       {% if page.layout == 'post' %}
-        <meta property="og:title" content="{{ page.title | default: site.name }}" />
-        <meta property="og:type" content="article" />
-        <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
-        <meta property="og:locale" content="{{ page.language | default: 'pt_BR' }}" />
-        <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" />
-        <meta property="article:author" content="{{ page.author | default: site.author-url }}" />
-        <meta property="article:section" content="{{ page.category | default: 'desenvolvimento' }}" />
-        {% if page.tags %}
-          {% for tag in page.tags %}
-            <meta property="article:tag" content="{{ tag }}" />
-          {% endfor %}
-        {% endif %}
+        {% include opengraph.html %}
       {% endif %}
-
       <link href="//fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,700|Lora:400,700,400italic" rel="stylesheet" type="text/css">
       <link rel="stylesheet" type="text/css" href="{{ site.baseurl| split: '/' | join:'/' }}/css/main.css" />
       <link href="atom.xml" type="application/atom+xml" rel="alternate" title="Site ATOM Feed">
