--- a/_includes/opengraph.html
+++ b/_includes/opengraph.html
@@ -1,4 +1,4 @@
-<meta property="og:title" content="{{ page.title | default: site.name }}" />
+<meta property="og:title" content="{{ page.title | default: site.title }}" />
 <meta property="og:description" content="{{ page.description | default: site.description }}" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
